--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -8,7 +8,21 @@ services:
       - "27017:27017"
     volumes:
       - mongo_data:/data/db
-  
+  basketdb:
+    container_name: basketdb
+    restart: always
+    ports: 
+      - "6739:6739"
+  portainer:
+    container_name: portainer
+    restart: always
+    ports: 
+      - "8080:8000"
+      - "9000:9000" 
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - portainer_data:/data
+
   catalog.api:
     container_name: catalog.api
     environment:
@@ -19,3 +33,15 @@ services:
       - catalogdb
     ports:
       - "8000:8080"
+
+  basket.api:
+    container_name: basket.api
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - "CacheSettings:ConnectionString=basketdb:6379"
+      - ASPNETCORE_HTTP_PORTS=8080
+    depends_on:
+      - basketdb
+    ports:
+      - "8001:8080"
+
