--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -3,9 +3,17 @@ version: '3.4'
 services:
   catalogdb:
     image: mongo
+
   basketdb:
     image: redis:alpine
-  portainer:
+
+  discountdb:
+    image: postgres
+
+  pgadmin:
+    image: dpage/pgadmin4
+
+  portainer: 
     image: portainer/portainer-ce
 
   catalog.api:
@@ -23,3 +31,5 @@ services:
 volumes:
   mongo_data: 
   portainer_data:
+  postgres_data:
+  pgadmin_data:
