--- a/src/Services/Discount/Discount.API/appsettings.json
+++ b/src/Services/Discount/Discount.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "DatabaseSettings": {
-    "ConnectionString": "Server=localhost;Port=5432;Database=DiscountDB;User Id=admin;Password=admin123456789"
+    "ConnectionString": "Server=localhost;Port=5432;Database=DiscountDb;User Id=admin;Password=admin123456789"
   },
     "Logging": {
       "LogLevel": {
