--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -69,3 +69,14 @@ services:
     ports:
       - "8001:8080"
 
+  discount.api:
+    container_name: discount.api
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_HTTP_PORTS=8080\
+      - "DatabaseSettings:ConnectionString=Server=discountdb;Port=5432;Database=DiscountDb;User Id=admin;Password=admin123456789"
+    depends_on:
+      - discountdb
+    ports:
+      - "8002:8080"
+
