--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -73,7 +73,7 @@ services:
     container_name: discount.api
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - ASPNETCORE_HTTP_PORTS=8080\
+      - ASPNETCORE_HTTP_PORTS=8080
       - "DatabaseSettings:ConnectionString=Server=discountdb;Port=5432;Database=DiscountDb;User Id=admin;Password=admin123456789"
     depends_on:
       - discountdb
